Add target volumes
Signed-off-by: Md. Ishtiaq Islam <ishtiaq@appscode.com>

--- a/backup-verification-session.yaml
+++ b/backup-verification-session.yaml
@@ -8,6 +8,7 @@ sepc:
   session: demo-session
   repository:  gcs-demo-repo
   snapshot: gcs-demo-repo-sample-backup-sts-demo-session-1702543201
+  retryLeft: 2
 status:
   conditions:
   - lastTransitionTime: "2023-12-14T08:40:33Z"
